lists.less: Fix list-item title word spacing

--- a/public/css/lists.less
+++ b/public/css/lists.less
@@ -114,10 +114,6 @@
       color: @text-color;
       font-weight: bold;
 
-      &:first-of-type {
-        margin-right: .417em;
-      }
-
       &:hover {
         color: @icinga-blue;
         text-decoration: none;
